--- a/QQ_src/src/main/res/layout/activity_welcome.xml
+++ b/QQ_src/src/main/res/layout/activity_welcome.xml
@@ -7,8 +7,9 @@
         android:id="@+id/iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/welcome" />
+        android:layout_gravity="center"
+        android:layout_margin="80dp"
+        android:src="@drawable/icon_qq" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,6 +21,6 @@
         android:padding="5dp"
         android:text="@string/str_copyright"
         android:textColor="@color/black_text"
-        android:textSize="@dimen/text_size_content" />
+        android:textSize="50sp" />
 
 </FrameLayout>
