添加库，修改图标，添加工具类

--- a/QQ_src/src/main/res/layout/activity_login.xml
+++ b/QQ_src/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:contentDescription="@string/app_name"
-        android:src="@mipmap/ic_launcher" />
+        android:src="@drawable/qq_head" />
 
     <RelativeLayout
         android:id="@+id/rl_user"
