--- a/QQ_src/src/main/res/values/dimens.xml
+++ b/QQ_src/src/main/res/values/dimens.xml
@@ -8,4 +8,7 @@
     <dimen name="text_size_readme">12sp</dimen>
     <dimen name="rb_corners">5dp</dimen>
     <dimen name="icon_size">48dp</dimen>
+    <dimen name="tab_item_size">80dp</dimen>
+
+
 </resources>
