--- a/QQ_src/src/main/res/layout/tabhost_item.xml
+++ b/QQ_src/src/main/res/layout/tabhost_item.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/iv_tabimg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/tab_item_size"
+        android:layout_height="@dimen/tab_item_size"
         android:src="@mipmap/ic_launcher" />
 
 </LinearLayout>
